[EMMA-50] Online Help - Fixed ".columns img" because Chrome isn't honoring "flex: 1 0 50%". - Fixed ".search-input-select" so that search menu selections are visible in   all browsers. - Added class "modal" to <html> in app/views/layouts/modal to conditionally   apply "overscroll-behavior: none" in order to avoid unexpected scrolling at   the top and bottom of the scrollable <iframe>. - Removed tooltip warning from multi-select menus. - Added unique id for the <iframe> specified by HelpHelper#help_popup.

--- a/app/assets/stylesheets/controllers/_help.scss
+++ b/app/assets/stylesheets/controllers/_help.scss
@@ -209,6 +209,7 @@
         img {
             flex:          1 0 50%;
             margin-bottom: auto !important;
+            max-width:     50%; // Chrome needs this; other browsers don't.
         }
 
         * + img {
