--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -512,6 +512,10 @@ $search-button-width:    6rem;
                 flex:   1 0 100%;
                 height: 2rem;
             }
+
+            option {
+                color: inherit; // Needed everywhere except Firefox.
+            }
         }
 
         // noinspection CssReplaceWithShorthandSafely
